--- a/index.html
+++ b/index.html
@@ -4,55 +4,71 @@
     <meta charset="UTF-8">
     <title>Maxime Le Maître</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
   </head>
   <body>
-    <div class="grid">
-      <div class="rellax diamond-lg orange backward" data-rellax-speed="-2" style="transform: translate3d(0px, -111px, 0px) rotate(45deg);
-";"></div>
-    </div>
     <div class="main">
       <div class="container">
+
         <div class="menu">
           <div class="menu-item">About</div>
           <div class="menu-item">Work</div>
           <div class="menu-item">Contact</div>
         </div>
-        <div class="slider">
-          <h1 class="forward">Hi! I’m Maxime, <br>a Digital Marketer <br>& Product Manager</h1>
+
+        <div class="slider col-md-12">
+          <h1 class="forward" style="font-size: 68px;";>Hi! I’m Maxime, <br>a Digital Marketer <br>& Product Manager</h1>
         </div>
-        <div class="about">
+
+        <div class="about col-md-10 col-md-offset-1">
           <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
         </div>
-        <div class="skills">
-          <div class="skill">
+
+        <div class="skills col-md-12">
+          <div class="skill col-md-6">
             <h2 class="title">Entrepreneur</h2>
             <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
           </div>
-          <div class="skill">
+          <div class="skill col-md-6 ">
             <h2 class="title">Digital Marketer</h2>
             <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
           </div>
-          <div class="skill">
+          <div class="skill col-md-6">
             <h2 class="title">Fullstack Developer</h2>
             <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
           </div>
-          <div class="skill">
+          <div class="skill col-md-6">
             <h2 class="title">Product Manager</h2>
             <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
           </div>
-         </div>
-       </div>
-     </div>
-    <div class="header">
-      <img class="picture" src="images/profile-pic.png" alt="My picture">
-      <div class="contact">
-        <h2 class="title">Let's talk!</h2>
-        <p> I’m  online on Messenger. It’s time to meet each others 👋</p>
+        </div>
+      </div>
+
+      <div class="card rellax" data-rellax-speed="1">
+        <img class="wave" src="images/wave-blue.png" alt="">
+        <img class="profile-pic" src="images/profile-pic.png" alt="My picture">
+        <div class="card-content">
+          <p> I’m  online on Messenger. It’s time to meet each others 👋</p>
+          <a href="#" class="decoration-none"><div class="cta-talk">Let's talk</div></a>
+        </div>
       </div>
     </div>
-    <div class="social-network">
+    <div class="grid">
+      <img class="wallpaper confetti-1 rellax backward" src="images/oval-green.png" alt="" data-rellax-speed="-1";>
+      <img class="wallpaper confetti-2 rellax backward" src="images/rectangle-orange.png" alt="" data-rellax-speed="-4";>
+      <img class="wallpaper confetti-3 rellax backward" src="images/cercle-blue.png" alt="" data-rellax-speed="-2";>
+      <img class="wallpaper confetti-4 rellax backward" src="images/triangle-blue.png" alt="" data-rellax-speed="1";>
+      <img class="wallpaper confetti-5 rellax backward" src="images/oval-green.png" alt="" data-rellax-speed="-3";>
+      <img class="wallpaper confetti-6 rellax backward" src="images/rectangle-green.png" alt="" data-rellax-speed="-2";>
+      <img class="wallpaper confetti-7 rellax backward" src="images/triangle-orange.png" alt="" data-rellax-speed="-4";>
+      <img class="wallpaper confetti-8 rellax backward" src="images/cercle-orange.png" alt="" data-rellax-speed="-1";>
+      <img class="wallpaper confetti-9 rellax backward" src="images/rectangle-blue.png" alt="" data-rellax-speed="-1";>
+      <img class="wallpaper confetti-10 rellax backward" src="images/oval-blue.png" alt="" data-rellax-speed="-3";>
+      <img class="wallpaper confetti-11 rellax backward" src="images/oval-orange.png" alt="" data-rellax-speed="1";>
     </div>
+
     <!-- javascript -->
     <script src="rellax.min.js"></script>
     <script>
