add foote, add confetti, improve the structure

--- a/index.html
+++ b/index.html
@@ -6,34 +6,33 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-
   </head>
   <body>
     <div class="main">
       <div class="container">
 
-        <div class="menu">
+<!--         <div class="menu">
           <div class="menu-item">About</div>
           <div class="menu-item">Work</div>
           <div class="menu-item">Contact</div>
-        </div>
+        </div> -->
 
         <div class="slider col-md-12">
-          <h1 class="forward" style="font-size: 68px;";>Hi! I’m Maxime, <br>a Digital Marketer <br>& Product Manager</h1>
+          <h1 class="forward" style="font-size: 68px;";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
         </div>
 
-        <div class="about col-md-10 col-md-offset-1">
-          <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
+        <div class="about col-md-10 col-md-offset-2">
+          <p> I’m a 26 y/o 🇫🇷 business school graduate passionate about innovation, startups and tech products.  In my life, I like to travel, play sports & learn new things.</p>
         </div>
 
         <div class="skills col-md-12">
           <div class="skill col-md-6">
             <h2 class="title">Entrepreneur</h2>
-            <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
+            <p> Always interested in entrepreneurship, I created my first startup at 22. Although I've not succeeded to find the right formula, I've never learned as much as during these two years.</p>
           </div>
           <div class="skill col-md-6 ">
             <h2 class="title">Digital Marketer</h2>
-            <p> I’m a 25 y/o 🇫🇷 business school graduate passionate about innovation, startups and more precisely tech products. In my life, I like to travel, play sports (basket-ball) with friends & work on side projects.</p>
+            <p> Always interested in entrepreneurship, I created my first startup at 22. I've not succeeded to find the right formula, although I've never learned as much as during these two years.</p>
           </div>
           <div class="skill col-md-6">
             <h2 class="title">Fullstack Developer</h2>
@@ -49,10 +48,14 @@
       <div class="card rellax" data-rellax-speed="1">
         <img class="wave" src="images/wave-blue.png" alt="">
         <img class="profile-pic" src="images/profile-pic.png" alt="My picture">
+        <div class="dot-online"></div>
         <div class="card-content">
           <p> I’m  online on Messenger. It’s time to meet each others 👋</p>
           <a href="#" class="decoration-none"><div class="cta-talk">Let's talk</div></a>
         </div>
+      </div>
+      <div class="footer">
+      <p>Handcrafted with 🍺 from Montréal</p>
       </div>
     </div>
     <div class="grid">
@@ -62,15 +65,23 @@
       <img class="wallpaper confetti-4 rellax backward" src="images/triangle-blue.png" alt="" data-rellax-speed="1";>
       <img class="wallpaper confetti-5 rellax backward" src="images/oval-green.png" alt="" data-rellax-speed="-3";>
       <img class="wallpaper confetti-6 rellax backward" src="images/rectangle-green.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-7 rellax backward" src="images/triangle-orange.png" alt="" data-rellax-speed="-4";>
+      <img class="wallpaper confetti-7 rellax backward" src="images/triangle-orange.png" alt="" data-rellax-speed="2";>
       <img class="wallpaper confetti-8 rellax backward" src="images/cercle-orange.png" alt="" data-rellax-speed="-1";>
       <img class="wallpaper confetti-9 rellax backward" src="images/rectangle-blue.png" alt="" data-rellax-speed="-1";>
       <img class="wallpaper confetti-10 rellax backward" src="images/oval-blue.png" alt="" data-rellax-speed="-3";>
       <img class="wallpaper confetti-11 rellax backward" src="images/oval-orange.png" alt="" data-rellax-speed="1";>
+      <img class="wallpaper confetti-12 rellax backward" src="images/confetti-green.png" alt="" data-rellax-speed="-2";>
+      <img class="wallpaper confetti-13 rellax backward" src="images/confetti-blue.png" alt="" data-rellax-speed="1";>
+      <img class="wallpaper confetti-14 rellax backward" src="images/confetti-orange.png" alt="" data-rellax-speed="-1";>
+      <img class="wallpaper confetti-15 rellax backward" src="images/cercle-green.png" alt="" data-rellax-speed="-2";>
+      <img class="wallpaper confetti-16 rellax backward" src="images/rectangle-orange.png" alt="" data-rellax-speed="-2";>
+      <img class="wallpaper confetti-17 rellax backward" src="images/triangle-blue.png" alt="" data-rellax-speed="-2";>
     </div>
 
+
     <!-- javascript -->
-    <script src="rellax.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/rellax.min.js"></script>
     <script>
       // Accepts any class name
       var rellax = new Rellax('.rellax');
