--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         </div> -->
 
         <div class="slider col-md-12">
-          <h1 class="forward" style="font-size: 68px;";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
+          <div class="greeting">
+            <h1 class="forward" style="font-size: 68px;";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
+            <p class="position">Growth Hacker at <a href="https://www.stradigi.ca/"><u>Stradigi</u></a> in Montréal</p>
+          </div>
         </div>
 
         <div class="about col-md-10 col-md-offset-2">
