optimising for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -8,55 +8,65 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
     <div class="main">
       <div class="container">
-        <div class="slider col-md-12">
-          <div class="greeting">
-            <h1 class="forward" style="font-size: 60px;";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
-            <p class="position">Product Manager at <a href="https://mylo.ai/" target="_blank"><u>Mylo</u></a> in Montreal</p>
+        <div class="row">
+          <div class="slider col-md-12">
+            <div class="greeting">
+              <h1 class="forward";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
+              <p class="position">Product Manager at <a href="https://mylo.ai/" target="_blank"><u>Mylo</u></a> in Montreal</p>
+            </div>
           </div>
         </div>
-
-        <div class="about col-md-12">
-          <div class="profile-pic-section col-md-6">
-            <img class="big-profile-pic" src="images/profile-pic.png" alt="profile-pic">
-          </div>
-           <div class="col-md-6">
-            <p class="about-txt"> I’m a 🇫🇷 business school graduate passionate about innovation, startups and tech products. I spend my spare time learning new things, playing sports and saving money to travel.</p>
+        <div class="row">
+          <div class="about col-md-12">
+            <div class="profile-pic-section col-md-6">
+              <img class="big-profile-pic" src="images/profile-pic.png" alt="profile-pic">
+            </div>
+            <div class="col-md-6">
+              <p class="about-txt"> I’m a 🇫🇷 business school graduate passionate about innovation, startups and tech products. I spend my spare time learning new things, playing sports and saving money to travel.</p>
+            </div>
           </div>
         </div>
+        <div class="row">
+          <div class="skills col-md-12">
+            <div class="skill col-md-6">
+              <h2 class="title">Entrepreneur</h2>
+              <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in several early-stage startups from SaaS to teenagers oriented mobile app startups.</p>
+            </div>
+            <div class="skill col-md-6 ">
+              <h2 class="title">Digital Marketer</h2>
+              <p> I've a digital markerting background with experience in advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
+            </div>
+            <div class="skill col-md-6">
+              <h2 class="title">Fullstack Developer</h2>
+              <p> As a <a href="http://lewagon.com/" target="_blank"><u>Le Wagon</u></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><u>one of the best</u></a> existing coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><u>work</u></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
+            </div>
+            <div class="skill col-md-6">
+              <h2 class="title">Product Manager</h2>
+              <p> I'm a digital product lover, passionate about user psychology and UX design. I like building simple products that solve concrete and complexe problems.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <div class="skills col-md-12">
-          <div class="skill col-md-6">
-            <h2 class="title">Entrepreneur</h2>
-            <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in several early-stage startups from SaaS to teenagers oriented mobile app startups.</p>
-          </div>
-          <div class="skill col-md-6 ">
-            <h2 class="title">Digital Marketer</h2>
-            <p> I've a digital markerting background with experience in advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
-          </div>
-          <div class="skill col-md-6">
-            <h2 class="title">Fullstack Developer</h2>
-            <p> As a <a href="http://lewagon.com/" target="_blank"><u>Le Wagon</u></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><u>one of the best</u></a> existing coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><u>work</u></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
-          </div>
-          <div class="skill col-md-6">
-            <h2 class="title">Product Manager</h2>
-            <p> I'm a digital product lover, passionate about user psychology and UX design. I like building simple products that solve concrete and complexe problems.</p>
+      <div class="row">
+        <div class="contact col-md-12">
+          <div class="card">
+            <img class="wave" src="images/wave-blue.png">
+            <img class="small-profile-pic" src="images/profile-pic.png" alt="My picture">
+            <div class="dot-online"></div>
+            <div class="card-content">
+              <p> Need help on a project or just want to chat? It's time to meet each other 👋</p>
+              <a href="mailto:maximelm25@gmail.com" target="_blank" class="decoration-none"><div class="cta-talk">Let's chat</div></a>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="card rellax" data-rellax-speed="1">
-        <img class="wave" src="images/wave-blue.png" alt="">
-        <img class="small-profile-pic" src="images/profile-pic.png" alt="My picture">
-        <div class="dot-online"></div>
-        <div class="card-content">
-          <p> Need help on a project or just want to chat? It's time to meet each other 👋</p>
-          <a href="mailto:maximelm25@gmail.com" target="_blank" class="decoration-none"><div class="cta-talk">Let's chat</div></a>
-        </div>
-      </div>
       <div class="footer">
-      <p>Handcrafted with 🍺 from Montreal</p>
+        <p>Handcrafted with 🍺 from Montreal</p>
       </div>
     </div>
 
