--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Maxime Le Maître | Digital Product lover</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
