adding a effect on the cta

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </div>
             <div class="skill col-md-6 ">
               <h2 class="title">Digital Marketer</h2>
-              <p> I've a digital markerting background with experience in advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
+              <p> I've a digital markerting background with experience in working in the advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
             </div>
             <div class="skill col-md-6">
               <h2 class="title">Fullstack Developer</h2>
-              <p> As a <a href="http://lewagon.com/" target="_blank"><u>Le Wagon</u></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><u>one of the best</u></a> existing coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><u>work</u></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
+              <p> As a <a href="http://lewagon.com/" target="_blank"><u>Le Wagon</u></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><u>one of the best</u></a> coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><u>work</u></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
             </div>
             <div class="skill col-md-6">
               <h2 class="title">Product Manager</h2>
