solving hover CTA effect issue and improving the footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="skill col-md-6">
               <h2 class="title">Product Manager</h2>
-              <p> I'm a digital product lover, passionate about user psychology and UX design. I like building simple products that solve concrete and complexe problems.</p>
+              <p> I'm a digital product lover, passionate about user psychology and UX design. I like to contribute to building simple products that solve concrete and complexe problems.</p>
             </div>
           </div>
         </div>
@@ -58,13 +58,12 @@
               <div class="dot-online"></div>
               <div class="card-content">
                 <p> Need help on a project or just want to chat? It's time to meet each other 👋</p>
-                <a href="mailto:maximelm25@gmail.com" target="_blank" class="decoration-none"><div class="cta-talk">Let's chat</div></a>
+                <a href="mailto:maximelm25@gmail.com" target="_blank"><div class="cta-talk">Let's chat</div></a>
               </div>
             </div>
           </div>
         </div>
       </div>
-
       <div class="footer">
         <p>Handcrafted with 🍺 from Montreal</p>
       </div>
