add new card concept

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Maxime Le Maître | Digital Product lover</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <title>Maxime Le Maître</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
           <div class="slider col-md-12">
             <div class="greeting">
               <h1 class="forward";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
-              <p class="position">Product Manager at <a href="https://mylo.ai/" target="_blank"><u>Mylo</u></a> in Montreal</p>
+              <p class="position">Junior Product Manager at <a href="https://mylo.ai/" target="_blank"><u>Mylo</u></a> in Montreal</p>
             </div>
           </div>
         </div>
@@ -33,33 +33,29 @@
         <div class="row">
           <div class="skills col-md-12">
             <div class="skill col-md-6">
+              <img class="icon" src="images/icon.svg" alt="Entrepreneur" style="max-height: 80px";>
               <h2 class="title">Entrepreneur</h2>
-              <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in several early-stage startups from SaaS to teenagers oriented mobile app startups.</p>
+              <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in the develoment of several early-stage startups from SaaS product to teenagers oriented mobile app startups.</p>
             </div>
-            <div class="skill col-md-6 ">
+            <div class="skill digital-mkg col-md-6">
+              <img class="icon" src="images/Megaphone.svg" alt="Digital Marketing" style="max-height: 70px;">
               <h2 class="title">Digital Marketer</h2>
               <p> I've a digital markerting background with experience in working in the advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
             </div>
-            <div class="skill col-md-6">
+            <div class="skill developer col-md-6">
+              <img class="icon" src="images/Laptop.svg" alt="Fullstack Developer" style="max-height: 65px";>
               <h2 class="title">Fullstack Developer</h2>
-              <p> As a <a href="http://lewagon.com/" target="_blank"><u>Le Wagon</u></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><u>one of the best</u></a> coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><u>work</u></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
+              <p> As a <a href="http://lewagon.com/" target="_blank"><b>Le Wagon</b></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><b>one of the best</b></a> coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><b>work</b></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
             </div>
             <div class="skill col-md-6">
+              <img class="icon" src="images/Cube.svg" alt="Product Manager" style="max-height: 75px";>
               <h2 class="title">Product Manager</h2>
-              <p> I'm a digital product lover, passionate about user psychology and UX design. I like to contribute to building simple products that solve concrete and complexe problems.</p>
+              <p> I'm a digital product lover, passionate about user psychology and UX design. I like to work on building simple products that solve concrete problems.</p>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="contact col-md-12">
-            <div class="card">
-              <img class="wave" src="images/wave-blue.png">
-              <img class="small-profile-pic" src="images/profile-pic.png" alt="My picture">
-              <div class="dot-online"></div>
-              <div class="card-content">
-                <p> Need help on a project or just want to chat? It's time to meet each other 👋</p>
-                <a href="mailto:maximelm25@gmail.com" target="_blank"><div class="cta-talk">Let's chat</div></a>
-              </div>
+            <div class="contact col-md-6">
+              <h2 class="title">Need help?</h2>
+              <p> I’m interested in contributing to cool innovative project.</p>
+              <div class="cta-talk">🎉 Let's chat!</div>
             </div>
           </div>
         </div>
@@ -87,6 +83,9 @@
       <img class="wallpaper confetti-15 rellax backward" src="images/cercle-green.png" alt="" data-rellax-speed="-2";>
       <img class="wallpaper confetti-16 rellax backward" src="images/rectangle-orange.png" alt="" data-rellax-speed="-2";>
       <img class="wallpaper confetti-17 rellax backward" src="images/triangle-blue.png" alt="" data-rellax-speed="-2";>
+      <img class="wallpaper confetti-18 rellax backward" src="images/oval-pink.svg" alt="" data-rellax-speed="2";>
+      <img class="wallpaper confetti-19 rellax backward" src="images/triangle-pink.svg" alt="" data-rellax-speed="-1";>
+      <img class="wallpaper confetti-20 rellax backward" src="images/confetti-pink.svg" alt="" data-rellax-speed="-3";>
     </div>
 
 
