--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="contact col-md-6">
               <h2 class="title">Need help?</h2>
               <p> I’m interested in contributing to cool innovative project.</p>
-              <div class="cta-talk">🎉 Let's chat!</div>
+              <a href="mailto:m.lemaitre@mailistec.fr"><div class="cta-talk">🎉 Let's chat!</div></a>
             </div>
           </div>
         </div>
