Trying to deploy

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="skills col-md-12">
             <div class="skill col-md-6">
-              <img class="icon" src="images/icon.svg" alt="Entrepreneur" style="max-height: 80px";>
+              <img class="icon" src="images/Icon.svg" alt="Entrepreneur" style="max-height: 80px";>
               <h2 class="title">Entrepreneur</h2>
               <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in the develoment of several early-stage startups from SaaS product to teenagers oriented mobile app startups.</p>
             </div>
