removing underline on link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="slider col-md-12">
             <div class="greeting">
               <h1 class="forward";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
-              <p class="position">Junior Product Manager at <a href="https://mylo.ai/" target="_blank"><u>Mylo</u></a> in Montreal</p>
+              <p class="position">Junior Product Manager at <a href="https://mylo.ai/" target="_blank"><b>Mylo</b></a> in Montreal</p>
             </div>
           </div>
         </div>
