--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="skill col-md-6">
               <img class="icon" src="images/Cube.svg" alt="Product Manager" style="max-height: 75px";>
               <h2 class="title">Product Manager</h2>
-              <p> I'm a digital product lover, passionate about user psychology and UX design. I like to work on building simple products that solve concrete problems.</p>
+              <p> I'm a digital product lover, passionate about user psychology and UX design. I like to contribute building simple products that solve concrete problems.</p>
             </div>
             <div class="contact col-md-6">
               <h2 class="title">Need help?</h2>
-              <p> I’m interested in contributing to cool innovative project.</p>
+              <p> I’m interested in helping you growing your cool and innovative project.</p>
               <a href="mailto:m.lemaitre@mailistec.fr"><div class="cta-talk">🎉 Let's chat!</div></a>
             </div>
           </div>
