--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
           </div>
         </div>
         <div class="row">
-          <div class="skills col-md-12">
-            <div class="skill col-md-6">
+          <div class="skills col-lg-12">
+            <div class="skill col-lg-6">
               <img class="icon" src="images/Icon.svg" alt="Entrepreneur" style="max-height: 80px";>
               <h2 class="title">Entrepreneur</h2>
               <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in the develoment of several early-stage startups from SaaS product to teenagers oriented mobile app startups.</p>
             </div>
-            <div class="skill digital-mkg col-md-6">
+            <div class="skill digital-mkg col-lg-6">
               <img class="icon" src="images/Megaphone.svg" alt="Digital Marketing" style="max-height: 70px;">
               <h2 class="title">Digital Marketer</h2>
               <p> I've a digital markerting background with experience in working in the advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
             </div>
-            <div class="skill developer col-md-6">
+            <div class="skill developer col-lg-6">
               <img class="icon" src="images/Laptop.svg" alt="Fullstack Developer" style="max-height: 65px";>
               <h2 class="title">Fullstack Developer</h2>
               <p> As a <a href="http://lewagon.com/" target="_blank"><b>Le Wagon</b></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><b>one of the best</b></a> coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><b>work</b></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
             </div>
-            <div class="skill col-md-6">
+            <div class="skill col-lg-6">
               <img class="icon" src="images/Cube.svg" alt="Product Manager" style="max-height: 75px";>
               <h2 class="title">Product Manager</h2>
               <p> I'm a digital product lover, passionate about user psychology and UX design. I like to contribute building simple products that solve concrete problems.</p>
             </div>
-            <div class="contact col-md-6">
+            <div class="contact col-lg-6">
               <h2 class="title">Need help?</h2>
               <p> I’m interested in helping you growing your cool and innovative project.</p>
               <a href="mailto:m.lemaitre@mailistec.fr"><div class="cta-talk">🎉 Let's chat!</div></a>
