--- a/index.html
+++ b/index.html
@@ -10,62 +10,9 @@
   </head>
   <body>
 
-    <div class="main">
-      <div class="container">
-        <div class="row">
-          <div class="slider col-md-12">
-            <div class="greeting">
-              <h1 class="forward";>Hi! I’m Maxime, <br>Startup & Innovation <br>Enthusiast</h1>
-              <p class="position">Junior Product Manager at <a href="https://mylo.ai/" target="_blank"><b>Mylo</b></a> in Montreal</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="about col-md-12">
-            <div class="profile-pic-section col-md-6">
-              <img class="big-profile-pic" src="images/profile-pic.png" alt="profile-pic">
-            </div>
-            <div class="col-md-6">
-              <p class="about-txt"> I’m a 🇫🇷 business school graduate passionate about innovation, startups and tech products. I spend my spare time learning new things, playing sports and saving money to travel.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="skills col-lg-12">
-            <div class="skill col-lg-6">
-              <img class="icon" src="images/Icon.svg" alt="Entrepreneur" style="max-height: 80px";>
-              <h2 class="title">Entrepreneur</h2>
-              <p> Always interested in entrepreneurship, I created my first startup at 22. Over the past years, I have been involved in the develoment of several early-stage startups from SaaS product to teenagers oriented mobile app startups.</p>
-            </div>
-            <div class="skill digital-mkg col-lg-6">
-              <img class="icon" src="images/Megaphone.svg" alt="Digital Marketing" style="max-height: 70px;">
-              <h2 class="title">Digital Marketer</h2>
-              <p> I've a digital markerting background with experience in working in the advertising industry. I've been also naturally interested in Growth Hacking and every new innovative users acquisition approaches.</p>
-            </div>
-            <div class="skill developer col-lg-6">
-              <img class="icon" src="images/Laptop.svg" alt="Fullstack Developer" style="max-height: 65px";>
-              <h2 class="title">Fullstack Developer</h2>
-              <p> As a <a href="http://lewagon.com/" target="_blank"><b>Le Wagon</b></a> alumni, <a href="https://www.switchup.org/research/best-coding-bootcamps" target="_blank"><b>one of the best</b></a> coding bootcamp, I occasionally </u><a href="https://www.malt.fr/profile/maximelm" target="_blank"><b>work</b></a> for startups as a front-end (HTML, CSS, Javascript) and back-end developer (Ruby on Rails). </p>
-            </div>
-            <div class="skill col-lg-6">
-              <img class="icon" src="images/Cube.svg" alt="Product Manager" style="max-height: 75px";>
-              <h2 class="title">Product Manager</h2>
-              <p> I'm a digital product lover, passionate about user psychology and UX design. I like to contribute building simple products that solve concrete problems.</p>
-            </div>
-            <div class="contact col-lg-6">
-              <h2 class="title">Need help?</h2>
-              <p> I’m interested in helping you growing your cool and innovative project.</p>
-              <a href="mailto:m.lemaitre@mailistec.fr"><div class="cta-talk">🎉 Let's chat!</div></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
-        <p>Handcrafted with 🍺 from Montreal</p>
-      </div>
-    </div>
 
-    <div class="grid">
+    <!--<
+    div class="grid">
       <img class="wallpaper confetti-1 rellax backward" src="images/oval-green.png" alt="" data-rellax-speed="-1";>
       <img class="wallpaper confetti-2 rellax backward" src="images/rectangle-orange.png" alt="" data-rellax-speed="-4";>
       <img class="wallpaper confetti-3 rellax backward" src="images/cercle-blue.png" alt="" data-rellax-speed="-2";>
@@ -89,12 +36,12 @@
     </div>
 
 
-    <!-- javascript -->
+     javascript
     <script src="js/script.js"></script>
     <script src="js/rellax.min.js"></script>
     <script>
       // Accepts any class name
       var rellax = new Rellax('.rellax');
-    </script>
+    </script> -->
   </body>
 </html>
