--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div>
 
+    </div>
+
+    <div>
+
+    </div>
 
     <!--<
     div class="grid">
