cleaning my branch

--- a/index.html
+++ b/index.html
@@ -3,51 +3,108 @@
   <head>
     <meta charset="UTF-8">
     <title>Maxime Le Maître</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
   </head>
+
   <body>
-    <div>
 
+    <div class="container">
+
+      <div class="sidebar">
+        <h1>Maxime Le Maître</h1>
+        <p>Montréal, Canada</p>
+      </div>
+
+        <div class="main">
+
+        <h1>Product Enthusiast</h1>
+        <p>I’m french product manager with a natural attraction for innovating products, specially fintechs products.  </p>
+        <p>In 2017, I followed <a href="https://www.lewagon.com/">Le Wagon</a>, <a href="https://www.switchup.org/bootcamps/le-wagon">one of the best coding bootcamp</a> and decided then to use my skills to help startups build better products.</p>
+        <p>I’m currently keep sharpening these skills as the product manager of  <a href="https://mylo.ai">Mylo</a>, a top canadian fintech. </p>
+        <p>I also ocassionally contribute to other projects as <a href="https://www.malt.fr/profile/maximelm">a freelance developer</a>.</p>
+
+        <div class="section">
+          <h2>Work</h2>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Product Manager</h3>
+              <p>Mylo • Helps canadian achieve their financial goals</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="section">
+          <h2>Stack & Tools</h2>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Sketch</h3>
+              <p>The design tool kit</p>
+            </div>
+          </div>
+          <hr/>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Mixpanel</h3>
+              <p>Helping the World learn from its data</p>
+            </div>
+          </div>
+          <hr/>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Jira</h3>
+              <p>Issue & Project tracking software</p>
+            </div>
+          </div>
+          <hr/>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Zapier</h3>
+              <p>The easiest way to automate everything</p>
+            </div>
+          </div>
+          <hr/>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Ruby on Rails</h3>
+              <p>Server-side application framework</p>
+            </div>
+          </div>
+          <hr/>
+        </div>
+        <div class="section">
+          <h2>Currently reading</h2>
+          <div class="item">
+            <div class="img">
+              <img src="./images/mylo-logo.png" alt="Mylo-logo">
+            </div>
+            <div class="item-content">
+              <h3>Make</h3>
+              <p>Pieter Levels</p>
+            </div>
+          </div>
+          <a href="https://www.notion.so/maxlemaitre/Reading-list-bc17fa3f571c4782ac809bf31c8f41e8" target="_blank">Reading list</a>
+        </div>
+      </div>
     </div>
-
-    <div>
-
-    </div>
-
-    <!--<
-    div class="grid">
-      <img class="wallpaper confetti-1 rellax backward" src="images/oval-green.png" alt="" data-rellax-speed="-1";>
-      <img class="wallpaper confetti-2 rellax backward" src="images/rectangle-orange.png" alt="" data-rellax-speed="-4";>
-      <img class="wallpaper confetti-3 rellax backward" src="images/cercle-blue.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-4 rellax backward" src="images/triangle-blue.png" alt="" data-rellax-speed="1";>
-      <img class="wallpaper confetti-5 rellax backward" src="images/oval-green.png" alt="" data-rellax-speed="-3";>
-      <img class="wallpaper confetti-6 rellax backward" src="images/rectangle-green.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-7 rellax backward" src="images/triangle-orange.png" alt="" data-rellax-speed="2";>
-      <img class="wallpaper confetti-8 rellax backward" src="images/cercle-orange.png" alt="" data-rellax-speed="-1";>
-      <img class="wallpaper confetti-9 rellax backward" src="images/rectangle-blue.png" alt="" data-rellax-speed="-1";>
-      <img class="wallpaper confetti-10 rellax backward" src="images/oval-blue.png" alt="" data-rellax-speed="-3";>
-      <img class="wallpaper confetti-11 rellax backward" src="images/oval-orange.png" alt="" data-rellax-speed="1";>
-      <img class="wallpaper confetti-12 rellax backward" src="images/confetti-green.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-13 rellax backward" src="images/confetti-blue.png" alt="" data-rellax-speed="1";>
-      <img class="wallpaper confetti-14 rellax backward" src="images/confetti-orange.png" alt="" data-rellax-speed="-1";>
-      <img class="wallpaper confetti-15 rellax backward" src="images/cercle-green.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-16 rellax backward" src="images/rectangle-orange.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-17 rellax backward" src="images/triangle-blue.png" alt="" data-rellax-speed="-2";>
-      <img class="wallpaper confetti-18 rellax backward" src="images/oval-pink.svg" alt="" data-rellax-speed="2";>
-      <img class="wallpaper confetti-19 rellax backward" src="images/triangle-pink.svg" alt="" data-rellax-speed="-1";>
-      <img class="wallpaper confetti-20 rellax backward" src="images/confetti-pink.svg" alt="" data-rellax-speed="-3";>
-    </div>
-
-
-     javascript
-    <script src="js/script.js"></script>
-    <script src="js/rellax.min.js"></script>
-    <script>
-      // Accepts any class name
-      var rellax = new Rellax('.rellax');
-    </script> -->
   </body>
 </html>
